--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=firstTask
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=muliro
+spring.datasource.password=senha123
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
