feat: Adicionando configurações do CORS e analizando rotas de security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+
+logging.level.org.springframework.security=DEBUG
