--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=firstTask
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=muliro
-spring.datasource.password=senha123
+spring.datasource.password=123
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
